# douyin-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  smoke_test.py
apiproxy/common/: asr.py
apiproxy/douyin/: __init__.py  douyin.py  download.py
docs/: AGENT_RUNBOOK.md  HUMAN_SETUP.md
scripts/: smoke_test.py
scripts/legacy/: README.md  auto_asr_after_download.py  batch_asr.py  batch_asr_new.py  batch_download.py  batch_download_new.py  check_progress.py  extract_and_dedup.py  extract_dedup_resolve.py  extract_links.py  gen_all_xlsx.py  gen_xlsx.py  monitor_and_asr.py  monitor_new.py  prefetch_whisper.py
tests/: test_distribution.py
utils/: logger.py
