[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "douyin-mcp-server"
version = "0.1.0"
description = "A self-contained MCP server for Douyin parsing and downloading."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.0.0",
  "requests>=2.28.0",
  "rich>=13.7.0",
  "tqdm>=4.66.0",
  "playwright>=1.40.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
]

[project.scripts]
douyin-mcp-server = "server:main"
douyin-mcp-smoke = "smoke_test:main"

[tool.setuptools]
py-modules = ["server", "smoke_test"]

[tool.setuptools.packages.find]
include = ["apiproxy*", "utils*"]
